# fastinference

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  setup.py  test.sh
fastinference/models/: Model.py
profiles/automatic/: timings_automatic_128.out  timings_automatic_2.out  timings_automatic_256.out  timings_automatic_8.out
profiles/cpu/: timings_cpu_1.out  timings_cpu_128.out  timings_cpu_16.out  timings_cpu_2.out  timings_cpu_256.out  timings_cpu_32.out  timings_cpu_4.out  timings_cpu_512.out  timings_cpu_64.out  timings_cpu_8.out
profiles/x/: timings_x_1.out  timings_x_128.out  timings_x_16.out  timings_x_2.out  timings_x_256.out  timings_x_32.out  timings_x_4.out  timings_x_512.out  timings_x_64.out  timings_x_8.out
profiles/xy/: timings_xy_1.out  timings_xy_128.out  timings_xy_16.out  timings_xy_2.out  timings_xy_256.out  timings_xy_32.out  timings_xy_4.out  timings_xy_512.out  timings_xy_64.out  timings_xy_8.out
profiles/xyz/: timings_xyz_1.out  timings_xyz_128.out  timings_xyz_16.out  timings_xyz_2.out  timings_xyz_256.out  timings_xyz_32.out  timings_xyz_4.out  timings_xyz_512.out  timings_xyz_64.out  timings_xyz_8.out
profiles/xz/: timings_xz_1.out  timings_xz_128.out  timings_xz_16.out  timings_xz_2.out  timings_xz_256.out  timings_xz_32.out  timings_xz_4.out  (+3 more)
tests/: CMakeLists_batches.txt  main.cpp  main_batches.cpp  main_test.cpp  run.sh  run_test.sh  test_utils.py  train_cifar_cnn.py  train_fashion_cnn.py
tmp/fastinference/cudatest - Copy/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  model.cpp  model.h  testCode
tmp/fastinference/cudatest - Copy/lightning_logs/version_1/: events.out.tfevents.1650977164.LDB-XPS.2560.0
tmp/fastinference/cudatest - Copy/lightning_logs/version_1/checkpoints/: epoch=0-step=937.ckpt
tmp/fastinference/cudatest - Copy/outputs/layer11/: orig.out
tmp/fastinference/cudatest - Copy/outputs/layer2/: orig.out
tmp/fastinference/cudatest - Copy/outputs/layer5/: orig.out
tmp/fastinference/cudatest - Copy/outputs/layer9/: par.out
tmp/fastinference/cudatest - Copy/profiles/x/: timings_x_2.out
tmp/fastinference/cudatest - Copy/profiles/xy/: timings_xy_2.out
tmp/fastinference/cudatest - Copy/profiles/xyz/: timings_xyz_2.out
tmp/fastinference/cudatest - Copy/profiles/y/: timings_y_2.out
tmp/fastinference/cudatest - Copy/profiles/z/: timings_z_2.out
(+2643 files in other folders)
